# paddle-flake8-project

./: 404.html  README.md  hashmap.json  index.html  justfile  pyproject.toml
.github/workflows/: lint-and-fmt.yml  unit-test.yml  vitepress-deploy.yml
assets/: app.7df73375.js  error-codes_F401.md.fe1ca256.js  error-codes_F401.md.fe1ca256.lean.js  error-codes_index.md.b3d97116.js  error-codes_index.md.b3d97116.lean.js  guide_ci.md.43d79233.js  guide_ci.md.43d79233.lean.js  guide_git.md.638c8151.js  guide_git.md.638c8151.lean.js  guide_process.md.2057071e.js  guide_process.md.2057071e.lean.js  index.md.79fab5ff.js  index.md.79fab5ff.lean.js  style.99d1f540.css
docs/: index.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/error-codes/: F401.md  index.md
docs/guide/: ci.md  git.md  process.md
error-codes/: F401.html  index.html
flake8_scripts/: __main__.py  remove_future_import.py  six_remover.py  u_string_remover.py
flake8_scripts/utils/: replace.py  resolve.py
guide/: ci.html  git.html  process.html
tests/: test_flake8_scripts.py  test_u_string_remover.py
tests/test_six_remover/: runtime_checker.py  test_remove_attributes.py  test_remove_b.py  test_remove_iteritems.py  test_remove_moves_imports.py  test_remove_moves_xrange.py  test_remove_moves_zip.py  test_remove_u.py  test_remove_xrange.py
