[tool.poetry]
name = "flake8_scripts"
version = "0.1.0"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cattidea/paddle-flake8-scripts"
repository = "https://github.com/cattidea/paddle-flake8-scripts"
keywords = []
classifiers = [
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^22.1"
pytest-parallel = "^0.1.1"
isort = "^5.10.1"
tomli = { version = "^2.0.1", python = "<3.11" }
pytest = "^7.1.3"
pyright = "^1.1.274"
six = "^1.16.0"
pytest-rerunfailures = "^10.2"

[tool.poetry.scripts]
# entry = "flake8_scripts.__main__:main"
remove-future-import = "flake8_scripts.remove_future_import:main"
six-remover = "flake8_scripts.six_remover:main"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]
skip = ["setup.py", ".venv"]

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
